--- a/centos8.html
+++ b/centos8.html
@@ -337,7 +337,7 @@ chmod 777 /usr/share/phpmyadmin/tmp
 </pre>
 
         <pre>
-ALTER USER 'root'@'%' IDENTIFIED WITH myswl_native_password BY 'thispass';
+          ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY 'thispass';
 </pre>
 
         <h3 id="-หากต้องการเปลี่ยนตำแหน่งโฟลเดอร์-phpmyadmin">( หากต้องการเปลี่ยนตำแหน่งโฟลเดอร์ phpmyadmin)</h3>
